# rustomaton

./: Cargo.toml
src/: dfa.rs  lib.rs  nfa.rs  regex.rs
